--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 
-.vscode
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
@@ -23,6 +22,7 @@
 
 # Visual Studio cache directory
 .vs/
+.vscode/
 
 # Gradle cache directory
 .gradle/
